# N2NGui

./: CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  README-zh.md
Src/: main.cpp
Src/Project/: FMainWindowForm.h  MainWindow.cpp  MainWindow.h
src/: main.cpp  resource.qrc
src/ui/: ControlButtons.qml  ControlPanel.qml  LogView.qml  Login.qml  RemoteDatabaseHandler.cpp  RemoteDatabaseHandler.h  ServerTableView.qml  controlpanel.cpp  controlpanel.h  controlpanelbackend.cpp  controlpanelbackend.h  controlpanelwithoutuserserver.cpp  controlpanelwithoutuserserver.h  latencytester.cpp  latencytester.h  loginbackend.cpp  loginbackend.h  logindialog.cpp  logindialog.h  loginwidget.cpp  loginwidget.h  loginwidget.ui  resource.qrc  serverlistupdater.cpp  serverlistupdater.h
src/ui/qml/: ControlPanel.qml  LogView.qml  Login.qml  main.qml
